# ImageCollage

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODING_GUIDELINES.md  CONTRIBUTING.md  COORDINATE_SYSTEM_STANDARD.md  DEBUGGING.md  DEVELOPER_GUIDELINES.md  DIAGNOSTICS.md  README.md  TECH_DEBT.md  comprehensive_testing.yaml  island_test_config.yaml  pyproject.toml  requirements.txt
docs/: API_REFERENCE.md  API_REFERENCE_ORIGINAL_BACKUP.md  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  DEBUGGING.md  DIVERSITY.md  DIVERSITY_ORIGINAL_BACKUP.md  EXAMPLES.md  GETTING_STARTED.md  GPU_OPTIMIZATION.md  INITIAL_SPECS.md  LINEAGE_TRACKING.md  TECH_DEBT.md  TODO.md  TROUBLESHOOTING.md
example_configs/: README.md  advanced.yaml  balanced.yaml  demo.yaml  extreme.yaml  final_test.yaml  gpu.yaml  high.yaml  quick.yaml  test_lineage.yaml  ultimate_showcase.yaml  ultra.yaml
image_collage/: __init__.py
image_collage/cli/: helpers.py  main.py
image_collage/config/: settings.py
image_collage/core/: collage_generator.py
image_collage/diagnostics/: collector.py  visualizer.py
image_collage/examples/: advanced_config.py  basic_usage.py  gpu_accelerated.py
image_collage/fitness/: evaluator.py  gpu_evaluator.py
image_collage/genetic/: comprehensive_diversity.py  diversity_dashboard.py  fitness_sharing.py  ga_engine.py  intelligent_restart.py  island_model.py  spatial_diversity.py
image_collage/preprocessing/: image_processor.py
image_collage/rendering/: renderer.py
image_collage/tests/: __init__.py  test_comprehensive_coordinate_fixes.py  test_coordinate_fix.py
image_collage/utils/: __init__.py  color_tile_generator.py  coordinate_validation.py  diversity_metrics.py
scripts/: claude-start.sh  dry_audit.sh  new_project_setup.sh
tests/: __init__.py  test_comprehensive_coordinate_fixes.py  test_coordinate_fix.py
